--- a/alarm/Modules/Main/AlarmDetailsSettingsCell/AlarmDetailsTableViewCellType1.xib
+++ b/alarm/Modules/Main/AlarmDetailsSettingsCell/AlarmDetailsTableViewCellType1.xib
@@ -40,6 +40,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <connections>
+                <outlet property="labelName" destination="Rb9-bc-lm2" id="DFo-jv-oiZ"/>
+                <outlet property="labelValue" destination="uOQ-os-JXh" id="sfY-Yd-Gob"/>
+            </connections>
             <point key="canvasLocation" x="139" y="65"/>
         </tableViewCell>
     </objects>
