--- a/alarm/Modules/Main/AlarmDetailsSettingsCell/AlarmDetailsTableViewCellType2.xib
+++ b/alarm/Modules/Main/AlarmDetailsSettingsCell/AlarmDetailsTableViewCellType2.xib
@@ -41,6 +41,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="labelName" destination="IIk-nN-QeN" id="56x-rA-uDE"/>
+                <outlet property="switchElement" destination="edk-X3-mgx" id="4Iw-p5-6Du"/>
             </connections>
             <point key="canvasLocation" x="139" y="65"/>
         </tableViewCell>
